--- a/src/app/pages/search-catalog/search-catalog.component.html
+++ b/src/app/pages/search-catalog/search-catalog.component.html
@@ -66,7 +66,7 @@
         @for (prod of products; track prod.id) {
           <bae-off-card [productOff]=prod class="w-full h-full p-2"></bae-off-card>
         } @empty {
-          <div class="min-h-19 dark:text-gray-600 text-center">No se han encontrado ofertas.</div>
+          <div class="min-h-19 dark:text-gray-600 text-center">{{ 'DASHBOARD._not_found' | translate }}</div>
         } 
       </div>
       @if (!loading_more) {
