--- a/src/app/pages/seller-offerings/offerings/seller-product-spec/seller-product-spec.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-product-spec/seller-product-spec.component.html
@@ -9,7 +9,7 @@
         <div class="flex flex-row w-full justify-end">
             <!--<form class="max-w-lg w-1/2 pr-4 z-10">
                 <div class="relative">
-                    <input type="search" id="search" [formControl]="searchField" class="block p-2.5 w-full z-20 text-sm text-gray-900 bg-white shadow rounded-lg border-s-gray-50 border-s-2 border border-gray-300 focus:ring-blue-500 focus:border-blue-500"
+                    <input type="search" id="search" [formControl]="searchField" class="block p-2.5 w-full z-20 text-sm text-gray-900 bg-white shadow rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500"
                     placeholder="Filter product specifications..." />
                     <button type="submit" (click)="filterInventoryByKeywords()" class="absolute shadow top-0 end-0 inline-flex items-center p-2.5 text-sm font-medium h-full text-white bg-primary-100 rounded-e-lg hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300">
                         <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
