--- a/src/app/pages/checkout/checkout.component.html
+++ b/src/app/pages/checkout/checkout.component.html
@@ -154,7 +154,7 @@
             class="text-sm text-body dark:text-gray-200">{{ 'SHOPPING_CART._calculated' | translate }}</span></div>
         </div>
         <button class="inline-flex items-center justify-center shrink-0 font-semibold leading-none rounded outline-none transition duration-300 ease-in-out focus:outline-0 focus:shadow focus:ring-1 focus:ring-accent-700 bg-primary-50 dark:bg-primary-100 text-white border border-transparent hover:bg-secondary-100 dark:hover:bg-primary-50 px-5 py-0 h-12 mt-5 w-full"
-                (click)="orderProduct()">
+                (click)="orderProduct()" [disabled]="!PURCHASE_ENABLED">
           {{ 'SHOPPING_CART._checkout' | translate }}
         </button>
       </div>
