FIX add to cart card terms section now showing properly

--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -393,7 +393,7 @@
                                     <fa-icon [icon]="faScaleBalanced" class="fa-2xl text-primary-100 align-middle"></fa-icon>
                                 </div>
                             </div>
-                            <div id="terms" class="line-clamp-5">
+                            <div id="terms-markdown" class="line-clamp-5">
                                 <markdown class="text-lg font-normal text-gray-700 dark:text-gray-200 mb-4" [data]="productOff?.productOfferingTerm?.at(0)?.description"></markdown>
                             </div>
                             @if(showTermsMore==false){
