--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -188,25 +188,30 @@
                     @for (char of complianceProf; track char.id) {
                         <div class="w-full md:w-1/2 lg:w-1/3 px-4 mb-8">                
                             <div class="border border-2 rounded-lg shadow bg-white dark:bg-secondary-200 shadow-md p-8 h-full"
-                            [ngClass]="char.href == '#' ? 'border-red-400 dark:border-red-800' : (isVerified(char) && char.domesupported == true ? 'border-green-400' : 'border-gray-400')">
+                            [ngClass]="char.href == '#' ? 'border-gray-400' : (isVerified(char) && char.domesupported == true ? 'border-green-500' : 'border-green-300')">
                                 <h3 class="text-2xl font-bold mb-4 dark:text-white">{{char.name}}</h3>
                                 <div class="flex justify-between">
                                     @if (char.href == '#') {
-                                        <a class="text-xs ml-4 font-small md:font-medium inline-flex items-center px-2.5 py-0.5 rounded-md mb-2 bg-red-200 dark:bg-red-800 dark:text-white text-red-700">
-                                            Not achieved yet
+                                        <a class="text-xs font-small md:font-medium inline-flex items-center px-2.5 py-0.5 rounded-md mb-2 bg-gray-400 dark:bg-gray-700 dark:text-white text-gray-900">
+                                            Not required
                                         </a>
                                         <!-- TODO: ADD EXPIRED when dome supported certs are expired-->
                                     } @else {
                                         <a class="mb-2 font-small md:font-medium pl-4 text-primary-100" target="_blank" href="{{char.href}}">
                                             {{char.value}}
                                         </a>
-                                        @if(!char.domesupported || !isVerified(char)) {
-                                            <a class="text-xs font-small md:font-medium inline-flex items-center px-2.5 py-0.5 rounded-md mb-2 bg-gray-400 dark:bg-gray-700 dark:text-white text-gray-900">
+                                        @if(!char.domesupported) {
+                                            <a class="text-xs font-small md:font-medium inline-flex items-center px-2.5 py-0.5 rounded-md mb-2 bg-green-300 text-green-700">
                                                 Self declared
                                             </a>
                                         }
+                                        @if(char.domesupported == true && !isVerified(char)) {
+                                            <a class="text-xs font-small md:font-medium inline-flex items-center px-2.5 py-0.5 rounded-md mb-2 bg-green-300 text-green-700">
+                                                In validation
+                                            </a>
+                                        }
                                         @if(char.domesupported == true && isVerified(char)){
-                                            <a class="text-xs font-small md:font-medium inline-flex items-center px-2.5 py-0.5 rounded-md mb-2 bg-green-200 text-green-700">
+                                            <a class="text-xs font-small md:font-medium inline-flex items-center px-2.5 py-0.5 rounded-md mb-2 bg-green-500 text-white">
                                                 Dome verified
                                             </a>
                                         }
