ADD cookies policy

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -9,6 +9,9 @@
       <a href="../assets/privacy.pdf" target="_blank" class="mr-4 hover:underline md:mr-6">{{ 'FOOTER._privacy' | translate }}</a>
     </li>
     <li>
+      <a href="../assets/cookies.pdf" target="_blank" class="mr-4 hover:underline md:mr-6">{{ 'FOOTER._cookies' | translate }}</a>
+    </li>
+    <li>
       <a href="../assets/terms.pdf" target="_blank" class="mr-4 hover:underline md:mr-6">{{ 'FOOTER._licensing' | translate }}</a>
     </li>
     <li>
