Remove contact us banner

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -46,8 +46,8 @@
     <app-platform-benefits></app-platform-benefits>  
     <app-explore-dome></app-explore-dome>
   
-    @if(showContact){
+    <!-- @if(showContact){
       <contact-us [ngClass]="showContact ? 'backdrop-blur-sm': ''" class="flex justify-center overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full shadow-2xl"></contact-us>
-    }
+    } -->
   
   </div>
