--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -297,12 +297,12 @@
             }
         </div>
         
-        @if(prodSpec.productSpecCharacteristic != undefined && prodSpec.productSpecCharacteristic.length>0) {
+        @if(prodSpec.productSpecCharacteristic != undefined && prodChars.length>0) {
             <div #charsContent id="chars-container">
                 <h2 class="text-4xl font-extrabold text-primary-100 text-center pb-8 pt-12 dark:text-primary-50">Product characteristics</h2>
                 <div class="container mx-auto px-4">
                     <div class="flex flex-wrap -mx-4">
-                        @for (char of prodSpec.productSpecCharacteristic; track char.id; let idx = $index) {
+                        @for (char of prodChars; track char.id; let idx = $index) {
                             <div class="w-full md:w-1/2 lg:w-1/3 px-4 mb-8">                
                                 <div class="border border-gray-200 rounded-lg shadow bg-white dark:bg-secondary-200 dark:border-gray-800 shadow-md p-8 h-full">
                                     <h3 class="text-2xl font-bold mb-4 dark:text-white">{{char.name}}</h3>
